# DradisMD

./: .gitignore  dradismd.py  pyproject.toml
.github/workflows/: basic-poetryInstall.yml
