[tool.poetry]
name = "dradismd"
version = "0.2.1"
authors = []
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dradis-api = {git = "https://github.com/NorthwaveSecurity/dradis-api"}
requests = "^2.28.2"
rich = "^13.3.2"
pypandoc = "^1.11"
timeago = "^1.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
